# noter

./: .dockerignore  Cargo.toml  Dockerfile  README.md  noter.toml
src/: configs.rs  lib.rs  macros.rs  main.rs
tests/: parse_rust_config.rs  string_writer.rs
tests/test_data/: rust_config.toml
unreleased_notes/: .gitkeep
