[package]
name = "noter"
version = "0.1.1"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
description = "An application for managing release notes."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/noter"

[dependencies]
