[package]
name = "noter"
version = "0.3.1+dev0"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
description = "An application for managing release notes."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/noter"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.toml]
version = "0.7"

[dependencies.strfmt]
version = "0.2"

[dependencies.structopt]
version = "0.3"

[dependencies.anyhow]
version = "1.0"

[dependencies.chrono]
version = "0.4"

[dependencies.cargo_metadata]
version = "0.15"